--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/tweenmax.min.js"></script>
 </body>
 </html>
