added material icons, moved fonts/ folder to css/

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>My Template</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/material-icons.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/flex-box.css">
 </head>
@@ -16,7 +17,7 @@
 		<h1>HTML Static Template</h1>
 		<p>just a personal template</p>
 		<p><img class="img-responsive img-thumbnail" src="assets/iuiuiu.jpg" alt="The developer's inspiration" title="The developer's inspiration"></p>
-		<p>the developer's inpsiration...</p>
+		<p><i class="material-icons" style="color:#3498db">music_note</i> the developer's inpsiration...</p>
 		<p>2018</p>
 	</div>
 
